[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 120.0
margin_right = 360.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MassageLabel" type="Label" parent="."]
margin_left = 40.0
margin_top = 200.0
margin_right = 440.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps"
align = 1
valign = 1

[node name="Start" type="Button" parent="."]
margin_left = 200.0
margin_top = 320.0
margin_right = 281.0
margin_bottom = 360.0
custom_fonts/font = SubResource( 3 )
text = "Start"
icon_align = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
